--- a/css/chat-common.css
+++ b/css/chat-common.css
@@ -251,7 +251,7 @@ filter: progid:DXImageTransform.Microsoft.Alpha(opacity=60);
 .fm-chat-user {
     font-size: 13px;
     line-height: 18px;
-    color: #666666;
+    color: #333;
     margin-right: 20px;
     font-family: 'source_sans_prosemibold';
     display: block;
